[gd_scene load_steps=2 format=3 uid="uid://btubi1pvgl610"]

[ext_resource type="Script" uid="uid://ncpbt38j7hem" path="res://Scripts/main_menu.gd" id="1_m4laa"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1072.0
offset_top = 337.0
offset_right = 1072.0
offset_bottom = 337.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m4laa")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 400.0
offset_right = 250.0
offset_bottom = 600.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="InstructionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Instructions"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Instructions" type="TextEdit" parent="."]
visible = false
layout_mode = 0
offset_right = 1000.0
offset_bottom = 1000.0
text = "instructions go here"
placeholder_text = "test"

[node name="Button" type="Button" parent="Instructions"]
layout_mode = 0
offset_left = 500.0
offset_top = 900.0
offset_right = 600.0
offset_bottom = 970.0
text = "Done"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/InstructionsButton" to="." method="_on_instructions_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Instructions/Button" to="." method="_on_button_pressed"]
